# rspack

./: Cargo.toml  package.json  pnpm-lock.yaml
crates/node_binding/: Cargo.toml  binding.d.ts
crates/rspack_allocator/: Cargo.toml
crates/rspack_allocator/src/: lib.rs
crates/rspack_core/: Cargo.toml
crates/rspack_core/src/compiler/: compilation.rs  hmr.rs
crates/rspack_core/src/old_cache/local/: code_splitting_cache.rs
crates/rspack_error/: Cargo.toml
crates/rspack_hook/: Cargo.toml
crates/rspack_loader_swc/: Cargo.toml
crates/rspack_macros_test/: Cargo.toml
crates/rspack_napi/: Cargo.toml
crates/rspack_plugin_copy/: Cargo.toml
crates/rspack_plugin_javascript/: Cargo.toml
crates/rspack_plugin_progress/: Cargo.toml
crates/rspack_plugin_wasm/: Cargo.toml
crates/rspack_regex/: Cargo.toml
crates/rspack_storage/: Cargo.toml
crates/rspack_storage/src/: fs.rs  lib.rs
crates/rspack_storage/src/pack/: bucket.rs  fs.rs  meta.rs  mod.rs  options.rs  pack.rs  scope.rs  storage.rs  utils.rs
crates/rspack_storage/src/pack/async/: batch_handle_files.rs  batch_read_contents.rs  batch_read_keys.rs  batch_validate.rs  batch_write_packs.rs  mod.rs
crates/rspack_storage/src/pack/manager/: manager.rs  mod.rs  queue.rs
crates/rspack_storage/src/pack/pack/: mod.rs  pack.rs
crates/rspack_storage/src/pack/scope/: bucket.rs  meta.rs  mod.rs  options.rs  scope.rs
crates/rspack_storage/tests/: main.rs
crates/rspack_tracing/: Cargo.toml
crates/swc_plugin_import/: Cargo.toml
website/: package.json
