[package]
description = "rspack cache storage"
edition = "2021"
license = "MIT"
name = "rspack_storage"
repository = "https://github.com/web-infra-dev/rspack"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
itertools = {workspace = true}
rayon = {workspace = true}
rspack_error = {version = "0.1.0", path = "../rspack_error"}
rustc-hash = {workspace = true}
tokio = {workspace = true}

[dev-dependencies]
